Resolve hover glitch when exiting either the list of months or the list of years with the pointer. This stops the side panel from collapsing and reopening.

--- a/flexmeasures/ui/static/css/flexmeasures.css
+++ b/flexmeasures/ui/static/css/flexmeasures.css
@@ -939,7 +939,7 @@ body .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
         transform: translateX(-106%);
     }
     .sidepanel-container:hover > .left-sidepanel,
-    .sidepanel-container:active > .left-sidepanel {
+    .sidepanel-container:focus-within > .left-sidepanel {
         transform: translateX(-30px);
     }
 }
